Fix spacing issue

--- a/css/app.css
+++ b/css/app.css
@@ -821,10 +821,10 @@ nav {
 @media (max-width: 450px) {
   .form-container {
     padding: 20px 0px 30px 0px;
-    width: 90%;
+    width: 95%;
     margin-top: 60px; }
     .form-container img {
-      width: 70%; }
+      width: 90%; }
     .form-container form p {
       margin-top: 10px; }
     .form-container form input {
@@ -949,6 +949,15 @@ nav {
 @media (max-width: 420px) {
   .pre-footer {
     margin-top: -30px; } }
+@media (max-width: 400px) {
+  .pre-footer {
+    padding: 0; }
+    .pre-footer .locations li {
+      line-height: 2.5;
+      font-size: 12px; }
+      .pre-footer .locations li img {
+        height: 12px;
+        margin-right: 5px; } }
 .box-row {
   width: 50%;
   background: #0673c0;
