--- a/sass/contact-form.scss
+++ b/sass/contact-form.scss
@@ -66,10 +66,10 @@
 @media (max-width: 450px) {
   .form-container {
     padding: 20px 0px 30px 0px;
-    width: 90%;
+    width: 95%;
     margin-top: 60px;
     img {
-      width: 70%;
+      width: 90%;
     }
     form {
       p {
