--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -88,3 +88,19 @@
     margin-top: -30px;
   }
 }
+
+@media (max-width: 400px) {
+  .pre-footer {
+    padding: 0;
+    .locations {
+      li {
+        line-height: 2.5;
+        font-size: 12px;
+        img {
+          height: 12px;
+          margin-right: 5px;
+        }
+      }
+    }
+  }
+}
